Bug 1659457 - Do clone xml-pretty-printer's UA widget. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D87714